--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=foodweb
 server.port=8081
-#spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-#spring.datasource.username=your_username
-#spring.datasource.password=your_password
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/foodweb
+spring.datasource.username=root
+spring.datasource.password=15082003
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
