--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.0.Final</version> <!-- hoặc phiên bản mới nhất -->
+		</dependency>
 	</dependencies>
 
 	<build>
