--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.application.name=foodweb
 server.port=8081
+# MySQL Database Connection Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/foodweb
 spring.datasource.username=root
 spring.datasource.password=15082003
+
+# JPA & Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
