--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,28 @@
 			<version>0.11.5</version>
 		</dependency>
 			<!-- Spring Boot Starter Mail -->
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-mail</artifactId>
-			</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.5.3.Final</version>  <!-- Hoặc phiên bản mới nhất -->
+		</dependency>
 
+		<!-- Dependency cho MapStruct Processor (Dành cho build time) -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.5.3.Final</version> <!-- Cùng phiên bản với MapStruct -->
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
