--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.mail.username=your-email@example.com
 spring.mail.password=your-email-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# JWT configuration
+jwt.secret=YourSuperSecretKeyHereThatIsAtLeast32Characters
+jwt.expiration=86400000
+# 1 day in milliseconds (24*60*60*1000)
+
