--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 # MySQL Database Connection Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/foodweb
 spring.datasource.username=root
-spring.datasource.password=15082003
+spring.datasource.password=root
 
 # JPA & Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
