--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.open-in-view=false
 
 # Th? m?c l?u tr? hình ?nh
 image.upload-dir=src/main/resources/static/images
+spring.servlet.multipart.location=/path/to/temp/dir
