--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.datasource.password=root
 # JPA & Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
+logging.level.org.hibernate=DEBUG
 
 # Th? m?c l?u tr? hình ?nh
 image.upload-dir=src/main/resources/static/images
