--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,11 @@ spring.jpa.open-in-view=false
 logging.level.org.hibernate=DEBUG
 
 # Th? m?c l?u tr? hình ?nh
+spring.servlet.multipart.enabled=true
 image.upload-dir=src/main/resources/static/images
-spring.servlet.multipart.location=/path/to/temp/dir
+spring.servlet.multipart.location=/home/vunguyen/uploads
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+
